[package]
name = "rust-web-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
#tokio = "1.32.0"
#serde = "1.0.187"
tokio = { version = "1.0", features = ["full"] }

# Serde / json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"

tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9.0"

[dev-dependencies]
anyhow = "1.0.75"
httpc-test = "0.1.5"    # Uses reqwest & cookie store.
